force-app/main/default/objects/Staff_Working_Hours__c/Staff_Working_Hours__c.object-meta.xml
<CustomObject>
    <label>Staff Working Hours</label>
    <pluralLabel>Staff Working Hours</pluralLabel>
    <description>Weekly working schedule for Location Staff</description>
    <nameField>
        <label>Staff Working Hours Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>