force-app/main/default/objects/Staff_Working_Hours__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <description>Indicates if this schedule slot is active</description>
    <defaultValue>true</defaultValue>
</CustomField>