force-app/main/default/objects/Staff_Working_Hours__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <label>Staff</label>
    <type>Lookup</type>
    <description>Staff member for these working hours</description>
    <required>true</required>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Staff_Working_Hours</relationshipName>
    <relationshipLabel>Staff Working Hours</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>