force-app/main/default/objects/Staff_Working_Hours__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
    <description>Shift start time</description>
    <required>true</required>
</CustomField>